--- a/health_treats/pubspec.yaml
+++ b/health_treats/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   fluttertoast: ^8.0.9
   sqflite: ^2.4.0
   url_launcher: ^6.0.20
+  flutter_rating_bar: ^4.0.0
 
 
 dev_dependencies:
