--- a/health_treats/pubspec.yaml
+++ b/health_treats/pubspec.yaml
@@ -24,6 +24,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/
+    - assets/img/doces/
   
   fonts:
     - family: RedHatDisplay
