--- a/health_treats/pubspec.yaml
+++ b/health_treats/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   sqflite: ^2.4.0
   url_launcher: ^6.0.20
   flutter_rating_bar: ^4.0.0
+  fluentui_system_icons: ^1.1.264
 
 
 dev_dependencies:
